# les-project

./: README.md
.cursor/: mcp.json
.cursor/rules/: python-uv-management.mdc  roo-code-uv-integration.mdc  uv-migration-guide.mdc
rainbow-finder/: .gitignore  README.md
rainbow-finder/backend/: README.md  pyproject.toml
rainbow-finder/backend/agents/coordinator/: agent.py
rainbow-finder/backend/agents/notification/: agent.py
rainbow-finder/backend/agents/rainbow/: agent.py
rainbow-finder/backend/agents/user/: agent.py
rainbow-finder/backend/agents/weather/: agent.py
rainbow-finder/backend/services/: location_service.py  rainbow_service.py  sun_service.py  weather_service.py
rainbow-finder/docs/: README.md
rainbow-finder/frontend/: README.md
rainbow-finder/shared/: README.md
rainbow-finder/shared/constants/: app_constants.py
rainbow-finder/shared/models/: rainbow.py
rainbow-finder/tools/: README.md
